# multilingual-reader

./: .gitignore  CLAUDE.md  EXPERIMENTAL.md  MEMO.md  Makefile  README.md  convert_genspark.py  finetuning.js  fr-onde-en.txt  fr-onde-ja.txt  fr-onde.html  fr-onde.txt  main.py  merge_podcast_data.py  momentum.js  onde.js  physics-podcast-reader.html  physics-podcast-reader.js  podcast-reader.css  podcast-reader.html  podcast-reader.js  podcast-text-data.js  pyproject.toml  split_podcast_data.py  transformer.js  translate.py
comparison/: 1.txt  2-gemma3_4b.txt  2.txt  README.md  claude.md  gemini.md
examples/: finetuning-de.txt  finetuning-en.txt  finetuning-es.txt  finetuning-fr.txt  finetuning-ja.txt  finetuning-zh.txt  momentum-de.txt  momentum-en.txt  momentum-es.txt  momentum-fr.txt  momentum-ja.txt  momentum-zh.txt  momentum.html  onde-de.txt  onde-en.txt  onde-eo.txt  onde-es.txt  onde-fr.txt  onde-hi.txt  onde-ja.txt  onde-zh.txt  onde.html  transformer-de.txt  transformer-en.txt  transformer-es.txt  transformer-fr.txt  transformer-ja.txt  transformer-zh.txt  transformer.html
experimental/: MEMO.md  README.md  SCORES.md  SCORES.txt  aggregate_evaluations.py  analyze_2stage_diff.py  batch.sh  draft_to_text.py  evaluate_translation.py  generate_scores_md.py  sync_scores.py  translate-exp.py  translate.py  translate2.py  translate3.py  translate4.md  translate5.md  translate5.py  translate6.md  translate6.py
experimental2/: MEMO.md  README.md  SCORES.txt  batch.sh  translate.py
experimental3/: MODELS.txt
experimental4/: MODELS.txt  SCORES.txt  batch.sh  (+1 more)
(+13186 files in other folders)
