[project]
name = "multilingual-reader"
version = "2025.07.26"
description = "Multilingual podcast reader with speech synthesis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm7shi",
    "xml7shi>=0.1.0",
]

[tool.uv.sources]
llm7shi = { git = "https://github.com/7shi/llm7shi.git" }
