[project]
name = "multilingual-reader"
version = "2025.07.28"
description = "Multilingual podcast reader with speech synthesis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm7shi",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "xml7shi>=0.1.0",
]

[tool.uv.sources]
llm7shi = { git = "https://github.com/7shi/llm7shi.git" }
